Location widget for Post event page

--- a/alpha/citi_user/templates/citi_user/events.html
+++ b/alpha/citi_user/templates/citi_user/events.html
@@ -1,7 +1,7 @@
-{% extends 'home.html' %}
+{% extends 'base.html' %}
 {% block title %} > Your Events{% endblock %}
 
-{% block content %}
+{% block page %}
 <section class="body">
     <h1>Your Events</h1>
   <section>
