--- a/alpha/citi_user/templates/registration/activation_complete.html
+++ b/alpha/citi_user/templates/registration/activation_complete.html
@@ -1,6 +1,6 @@
-{% extends 'home.html' %}
+{% extends 'base.html' %}
 {% block title %} > Activated{% endblock %}
-{% block content %}
+{% block page %}
 <div id="activation_complete">
   <header>
     <h1>Thanks for activating</h1>
