--- a/alpha/citi_user/templates/registration/password_reset_complete.html
+++ b/alpha/citi_user/templates/registration/password_reset_complete.html
@@ -1,9 +1,9 @@
-{% extends "home.html" %}
+{% extends "base.html" %}
 {% load i18n %}
 
 {% block title %} > {% trans 'Password reset complete' %}{% endblock %}
 
-{% block content %}
+{% block page %}
 <section class="body">
 <h1>{% trans 'Password reset complete' %}</h1>
 
