--- a/alpha/citi_user/templates/registration/password_reset_confirm.html
+++ b/alpha/citi_user/templates/registration/password_reset_confirm.html
@@ -1,8 +1,8 @@
-{% extends 'home.html' %}
+{% extends 'base.html' %}
 {% load i18n %}
 {% block title %} > Confirm Reset{% endblock %}
 
-{% block content %}
+{% block page %}
 <section class="body">
 
 {% if validlink %}
