--- a/alpha/citi_user/templates/registration/password_reset_done.html
+++ b/alpha/citi_user/templates/registration/password_reset_done.html
@@ -1,7 +1,7 @@
-{% extends 'home.html' %}
+{% extends 'page.html' %}
 {% block title %} > Reset Successful{% endblock %}
 
-{% block content %}
+{% block page %}
 <section class="body">
 
   <h1>Password reset successful</h1>
