--- a/alpha/citi_user/templates/registration/registration_complete.html
+++ b/alpha/citi_user/templates/registration/registration_complete.html
@@ -1,7 +1,7 @@
-{% extends 'home.html' %}
+{% extends 'base.html' %}
 {% block title %} > Registration Complete{% endblock %}
 
-{% block content %}
+{% block page %}
 <div id="registration_complete">
   <header>
     <h1>Email sent</h1>
