--- a/alpha/event/templates/events/creation_complete.html
+++ b/alpha/event/templates/events/creation_complete.html
@@ -1,6 +1,6 @@
-{% extends 'home.html' %}
+{% extends 'base.html' %}
 {% block title %} >| Event Created{% endblock %}
-{% block content %}
+{% block page %}
   <section class="body noborder">
     <h1>Event Posted!</h1>
     <p><a href="{% url event_view slug %}">See event in action &rarr;</a></p>
