--- a/alpha/feedback/templates/feedback/contact_thanks.html
+++ b/alpha/feedback/templates/feedback/contact_thanks.html
@@ -1,6 +1,6 @@
-{% extends "home.html" %}
+{% extends "base.html" %}
 {% block title %} > Feedback > Thanks{% endblock %}
-{% block content %}
+{% block page %}
 <section class="body">
 <h2>Thank you.</h2>
 <p>Feedback sent. Thank you for your contribution.</p>
