--- a/alpha/citi_user/templates/registration/activate.html
+++ b/alpha/citi_user/templates/registration/activate.html
@@ -1,6 +1,6 @@
-{% extends 'home.html' %}
+{% extends 'base.html' %}
 {% block title %} > Activate{% endblock %}
-{% block content %}
+{% block page %}
 <div id="activate">
   {% if account %}
     <h1>Activated!</h1>
