--- a/alpha/citi_user/templates/registration/login.html
+++ b/alpha/citi_user/templates/registration/login.html
@@ -1,7 +1,7 @@
-{% extends 'home.html' %}
+{% extends 'base.html' %}
 {% block title %} > Sign In{% endblock %}
 
-{% block content %}
+{% block page %}
   <section class="body">
     <h1>Sign In to Cityfusion</h1>
     <form method="post">
