--- a/alpha/citi_user/templates/registration/password_reset_form.html
+++ b/alpha/citi_user/templates/registration/password_reset_form.html
@@ -1,7 +1,7 @@
-{% extends 'home.html' %}
+{% extends 'base.html' %}
 {% block title %} > Reset Password{% endblock %}
 
-{% block content %}
+{% block page %}
   <section class="body">
     <h1>Password Reset</h1>
     <p> Forgotten your password? Enter your email address below, and we'll e-mail instructions for setting a new one.</p>
