--- a/alpha/citi_user/templates/registration/terms.html
+++ b/alpha/citi_user/templates/registration/terms.html
@@ -1,7 +1,7 @@
-{% extends 'home.html' %}
+{% extends 'base.html' %}
 {% block title %} > Terms and Conditions{% endblock %}
 
-{% block content %}
+{% block page %}
 <header>
   <h1>Terms &amp; Conditions</h1>
 </header>
