--- a/alpha/event/templates/events/event_description.html
+++ b/alpha/event/templates/events/event_description.html
@@ -1,4 +1,4 @@
-{% extends 'home.html' %}
+{% extends 'base.html' %}
 {% block title %} > View > {{ event.name }}{% endblock %}
 
 {% block opengraph %}
@@ -9,7 +9,7 @@
 {% endif %}
 {% endblock %}
 
-{% block content %}
+{% block page %}
 
 {% block breadcrumb %}
   {% load date_formatting %}
@@ -34,31 +34,26 @@
 
 <aside id="photo">
   {% load event_pictures %}
-  <img src="{% event_picture_url event 200 %}">
+  <img align="left" style="border: solid thin #999; padding: 5px;" src="{% event_picture_url event 200 %}">
 </aside>
-
+<div style="width: 780px; float: right;">
 <section class="body noborder detail">
   <h1>{{ event.name }}</h1>
-
-  <ul>
-    <li class="date">
-      <a href="{% url event_browse_date date=event.start_time.date.isoformat %}">{{ event.start_time|just_day }}</a>
+      <h4><a href="{% url event_browse_date date=event.start_time.date.isoformat %}">{{ event.start_time|just_day }}</a>
       <br>{{ event.start_time|just_time }}
-      {% if event.end_time %}&mdash; {{ event.end_time|just_time }}{% endif %}
-    </li>
-    <li class="loc">
-      {{ event.location }}
-    </li>
-    <li class="price">
-      {{ event.price }}
-    </li>
-  </ul>
+      {% if event.end_time %}&mdash; {{ event.end_time|just_time }}{% endif %}</h4>
+
+   
+      <p><h3 style="color: orange;">Location: {{ event.location }}</p></h3>
+   
+      <h2 style="color: orange;">{{ event.price }}</h2>
   
   <p>{{ event.description|linebreaks }}</p>
   {% if event.website %}<p><a href="{{ event.website }}">Website</a></p>{% endif %}
-  <ul class="tags">
-    <li>{% for tag in event.tags.all %}<a href="{% url event_browse_tags tag.slug %}">{{ tag }}</a>{% if not forloop.last %}, {% endif %}{% endfor %}</li>
-  </ul>
+<h4>Tags: 
+    {% for tag in event.tags.all %}<a href="{% url event_browse_tags tag.slug %}">{{ tag }}</a>{% if not forloop.last %}, {% endif %}{% endfor %}</h4>
+  </div>
+  <div style="clear: both;"></div>
   <div class="fb-like" data-href="" data-send="true" data-width="450" data-show-faces="true"></div>
 </section>
 {% endblock %}
