--- a/alpha/home/templates/404.html
+++ b/alpha/home/templates/404.html
@@ -1,6 +1,6 @@
-{% extends 'home.html' %}
+{% extends 'base.html' %}
 
-{% block content %}
+{% block page %}
   <header>
     <h1>Uh oh! Page not found.</h1>
     <p>Sorry about that.</p>
