--- a/alpha/home/templates/500.html
+++ b/alpha/home/templates/500.html
@@ -1,6 +1,6 @@
-{% extends 'home.html' %}
+{% extends 'base.html' %}
 
-{% block content %}
+{% block page %}
   <header>
     <h1>500 Internal Server Error</h1>
     <p>That means our computer just crashed.</p>
