--- a/alpha/home/templates/header.html
+++ b/alpha/home/templates/header.html
@@ -1,59 +1,85 @@
-<header id="header">
-  <hgroup>
-    <h1><a href="{% url home %}">Cityfusion</a></h1>
-    <h2>The community at your fingertips</h2>
-  </hgroup>
-	
-  <nav id="main-nav">
-    <ul>
-      <li><a href="{% url event_browse %}"{% if browsing %} class="current" {% endif %}>Browse Events</a></li>
-      <li><a href="{% url event_create %}"{% if posting %} class="current" {% endif %}>Post an Event</a></li>
-    </ul>
-  </nav>
-  <nav id="user-nav">
-    <ul>
-      {% if user.is_authenticated %}
-      <li><a href="{% url citi_user_events %}">View your events</a></li>
-      <li><a href="{% url auth_logout %}">Sign out</a></li>
-      {% else %}
-      <li><a href="{% url auth_login %}">Sign In</a></li>
-      <li><a href="{% url registration_register %}">Register</a></li>
-      {% endif %}
-    </ul>
-  </nav>
-  
-  <nav id="city-nav">
-    <a href="">Saskatoon <span class="downtick"></span></a>
-  </nav>
+<div class="header-wrapper">
+    <div class="header">
+        <div class="primary-header-wrapper">
+        <div class="logo"><a href="index.php"><img src="images/logo.png" /></a></div>
 
-</header>
+        <!--start.sign-up-wrapper-top-->
+        <div class="sign-up-wrapper-top">
+            <div class="sign-up-and-facebook">
+                	
+                		<!--start login-->
+                        <div class="login-entry-info">
+                            <ul>
+                                <li><a href="#">Login</a>
+                                    <div class="pop-up-wrapper">
+	                                    <div class="pop-up-pointer"></div>
+                                        <div class="pop-up-wrapper-container">
+                                          <div class="contents">                                                
+                                                <div class="pop-featured-details">
+                                                	<form action="post" target="" name="">
+                                                   		<p><div class="space">Login :</div> <input type="text" name="login"/></p>
+                                                        <p><div class="space">Password:</div> <input type="text" name="pass" /></p>
+                                                        <p><div class="space">&nbsp;</div> <input type="button" name="submit" value="Submit" /></p>
+                                                    </form>
+                                                </div>
+                                            </div>
+                                      </div>                                      
+                                    </div>
+                                </li>
+                                <li>&nbsp; | &nbsp;<a href="#">Signup</a></li>
+                                <li><a href="#"><img src="images/fb-sign-in-with-facebook.png" align="absmiddle" /></a></li>
+                                <div class="clr"></div>
+                            </ul>                                            
+		                 <div class="clr"></div>
+          			 </div>
+                     <!-- end login-->
+            </div>
+          <div class="post-events-for-free"><a href="#"><img src="images/post-events-for-free.png" /></a></div>
+        </div>
+        <!--end.sign-up-wrapper-top-->        
 
-<aside id="city-widget">
-  <p>Cityfusion is currently only available in Saskatoon, Canada.</p>
-  <p><span class="white">Want your city to be next?</span><br><a href="/feedback">Let us know.</a></p>
-</aside>
+        <div class="clr"></div>
+        </div>
 
-{% if browse_bar %}
-<nav id="date-nav">
-  <ul>
-    <li>
-      <a href="{% url event_browse_tags_date date="today" old_tags=current_tags %}" {% if page_date == "today" %}class="current"{% endif %}>Today</a>
-    </li>
-    <li>
-      <a href="{% url event_browse_tags_date date="tomorrow" old_tags=current_tags %}" {% if page_date == "tomorrow" %}class="current"{% endif %}>Tomorrow</a>
-    </li>
-    <li>
-      <a href="{% url event_browse_tags_date date="this-weekend" old_tags=current_tags %}" {% if page_date == "this-weekend" %}class="current"{% endif %}>This weekend</a>
-    </li>
-    <li>
-      <a href="{% url event_browse_tags_date date="this-week" old_tags=current_tags %}" {% if page_date == "this-week" %}class="current"{% endif %}>This week</a>
-    </li>
-    <li>
-      <a href="{% url event_browse_tags_date date="next-week" old_tags=current_tags %}" {% if page_date == "next-week" %}class="current"{% endif %}>Next week</a>
-    </li>			
-    <li>
-      <a href="" class="jump">Jump to date</a>
-    </li>
-  </ul>
-</nav>
-{% endif %}
+        <!--start.menu-wrapper-->
+        <div class="menu-wrapper">
+            <ul class="main-menu">
+                <li class="addBorderRight"><a href="browse-events.php">Browse Events</a></li>
+                <li class="addBorderRight"><a href="post-events.php">Post Events</a></li>
+                <li class="addBorderRight"><a href="profile.php">Profile</a></li>
+                <div class="clr"></div>
+            </ul>
+            <div class="location-wrapper">
+                <form action="" method="get" name="sform">	
+                <div class="location-label">Location : </div>
+                <div class="location-selection-wrapper">
+                    <div class="location-text-box"><input type="text" name="location" class="location" value="<?php defineLocation();?>"></div>
+                    <div class="search-lists">
+                        <ul>
+                            <h3>Pick a Location</h3>
+                            <li><a href="#" rel="Vestibulum, dapibus">Vestibulum, dapibus</a></li>
+                            <li><a href="#" rel="Praesent, mollis">Praesent, mollis</a></li>
+                            <li><a href="#" rel="Aenean, tempor">Aenean, tempor</a></li>
+                            <li><a href="#" rel="Morbi, sem tellus">Morbi, sem tellus</a></li>
+                            <li><a href="#" rel="Nulla varius,lobortis">Nulla varius,lobortis</a></li>
+                            <li><a href="#" rel="Quisque et, lorem sed">Quisque et, lorem sed</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="search-label">Search For : </div>
+                 <div class="search-selection-wrapper">
+                    <div class="search-text-box">
+                        <input type="text" name="search" value="(e.g. jazz, Zumanity, Coldplay)" onBlur="onBlur(this)" onFocus="onFocus(this)" class="search">
+                        <div class="search-submission" onClick="sform.submit();"></div>
+                        <div class="clr"></div>
+                    </div>
+                </div>
+                <div class="clr"></div>
+                </form>
+            </div>
+            <div class="clr"></div>
+        </div>
+        <!--end.menu-wrapper-->
+    
+    </div>
+</div>
