--- a/alpha/event/templates/events/create_event.html
+++ b/alpha/event/templates/events/create_event.html
@@ -6,8 +6,13 @@
 <link href="{{STATIC_URL}}styles/tcal.css" rel="stylesheet" type="text/css" />
 <link href="{{STATIC_URL}}styles/create_event.css" rel="stylesheet" type="text/css" />
 {% include_ui_theme 'ui-lightness' %}
+<link href="{{STATIC_URL}}styles/datepicker.css" rel="stylesheet" type="text/css" />
+<link href="{{STATIC_URL}}js/time/jquery.ptTimeSelect.css" rel="stylesheet" type="text/css" />
+<link href="{{STATIC_URL}}styles/when.css" rel="stylesheet" type="text/css" />
+
 {% include_jquery_libs %}
-<link href="{{STATIC_URL}}styles/dj.selectable.css" rel="stylesheet" type="text/css" />
+
+
 <script src="{{STATIC_URL}}js/create_event.js" type="text/javascript"></script>
 <script src="{{STATIC_URL}}js/jquery.dj.selectable.js" type="text/javascript"></script>
 <script src="{{STATIC_URL}}js/showhint.js" type="text/javascript"></script>
@@ -29,41 +34,10 @@ $(document).ready(function(e) {
     function newParameters(query) {
         query.foo = 'bar';
     }
-
-    // $(document).ready(function() {
-    //     $('#id_location_name').djselectable();
-    // });
 });
 
 </script>
 
-
-<style>
-#id_start_time_1 {
-	width: 30px;
-}
-#id_end_time_1 {
-width: 30px;
-}
-#id_frequency {
-padding: 4px;
-border-radius: 4px;
-background: white;
-border: #E3E3E3 solid thin;
-}
-SPAN.tagMatches {
-    margin-left: 10px;
-}
-
-SPAN.tagMatches SPAN {
-    padding: 2px;
-    margin-right: 4px;
-    background-color: #0000AB;
-    color: #fff;
-    cursor: pointer;
-    background: url(/static/images/blue.png);
-}
-</style>
 <script type="text/javascript" src="{{STATIC_URL}}/js/auto.js"></script>
 
 <div class="wrapper">
@@ -136,21 +110,12 @@ SPAN.tagMatches SPAN {
                                             </td>
                                         </tr>
                                         <tr>
-                                            <td>Start Date & Time</td><td>{{form.start_time}}</td><td><a href="#" onmouseover="showhint('<h3>Help - Enter event <i>[start date]:</i></h3><p><strong>e.g:</strong> &ldquo;August 23rd 2012 3.30pm&rdquo; </p>', this, event, '250px')"><div class="buttonq"></div></a>
-
+                                            <td>When</td>
+                                            <td>
+                                                {{form.when}}
                                             </td>
-                                        </tr>
-                                        <tr>
-                                        <ul>
-
-	</ul>
-                                            <td>End Date & Time</td><td>{{form.end_time}}</td><td><a href="#" onmouseover="showhint('<h3>Help - Enter event <i>[End time]:</i></h3><p><strong></strong> &ldquo;Should be later than start time&rdquo;</p>', this, event, '250px')"><div class="buttonq"></div></a>
-
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>Reccurrence&nbsp;&nbsp;</td><td>&nbsp;&nbsp;{{form.frequency}}</td><td><a href="#" onmouseover="showhint('<h3>Help - Enter event <i>[Recurrence]:</i></h3><p><strong>e.g:</strong> &ldquo;Daily&rdquo;  or &ldquo;Weekly&rdquo; </p>', this, event, '250px')"><div class="buttonq"></div></a>
-
+                                            <td>
+                                                <a href="#" onmouseover="showhint('<h3>Help - Enter event <i>[start date]:</i></h3><p><strong>e.g:</strong> &ldquo;August 23rd 2012 3.30pm&rdquo; </p>', this, event, '250px')"><div class="buttonq"></div></a>
                                             </td>
                                         </tr>
                                         <tr>
