--- a/alpha/event/templates/events/create_event.html
+++ b/alpha/event/templates/events/create_event.html
@@ -10,6 +10,8 @@
 <link href="{{STATIC_URL}}js/time/jquery.ptTimeSelect.css" rel="stylesheet" type="text/css" />
 <link href="{{STATIC_URL}}styles/when.css" rel="stylesheet" type="text/css" />
 
+<link href="{{STATIC_URL}}styles/tcal.css" rel="stylesheet" type="text/css" />
+
 {% include_jquery_libs %}
 
 
